# PropRadar

./: .env.example  .env.example.local  .env.example.server  .gitignore  CHANGELOG.md  README.md  compose.yaml  pyproject.toml
.cursor/agents/: architect.mdc  dispatcher.mdc  documentor.mdc  engineer-repairman.mdc  process-guard.mdc  release-check.mdc  review.mdc  tester.mdc
.cursor/rules/: Rules-for-AI.mdc
docker/app/: .env.example  (+4 more)
docs/: AI_GOVERNANCE.md  API.md  CLAUDE_SERVER.md  DEPLOY_SERVER.md  INGRESS_ARCHITECTURE.md  METABASE_SETUP.md  PropRadar — myhome.ge Phone Enricher (документация).md  PropRadar_STATUS.md  TLS_LETSENCRYPT.md  myhome_login.md  n8n_myhome_workflow.md  phone_extraction.md  playwright_worker.md
metabase/: map_objects_dashboard.json  monitoring_admin_dashboard.json  propradar_dashboard.json
migrations/: 001_init_leads.sql  002_add_myhome_listing_fields.sql  003_add_lead_details.sql  004_add_text_lang_columns.sql  005_myhome_api_first.sql  006_add_price_gel_rename_price_usd.sql  007_create_leads_client_table.sql  008_recreate_leads_client_v2.sql  009_add_city_name_to_leads_client.sql  010_add_status_reason_to_leads.sql  011_add_phone_retries.sql  012_backfill_rooms_from_room_type_id.sql  013_add_inactive_lead_status.sql  014_add_delete_trigger_leads_client.sql
scripts/: backfill_price_gel.py  create_metabase_dashboards.py  fetch_myhome_ids.py  metabase_api_common.py  metabase_setup.py  myhome_login.py  run_myhome_enricher.py  run_myhome_parser.py  setup_metabase_dashboard.py  setup_venv.ps1  sync_myhome_status.py
tests/: conftest.py
(+83 files in other folders)
