[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "propradar"
version = "0.1.0"
description = "PropRadar — лидогенерация с рынка недвижимости Грузии"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "psycopg2-binary>=2.9.9",
    "playwright>=1.43.0",
    "playwright-stealth>=2.0.3",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.0",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: сеть и/или внешнее HTTP API myhome",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["api", "config", "domain", "parsers", "repositories", "services", "worker"]
